# onednn-sys

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs  wrapper.hpp
.github/workflows/: rust.yml
src/: bindings.rs  bindings_opencl.rs  lib.rs
tests/: integration_tests.rs
