[package]
name = "onednn-sys"
version = "0.0.1"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
links = "dnnl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"

[build-dependencies]
# generate bindings, dev only
bindgen = { version = "0.54.0", optional = true }
cmake = "0.1.44"



