[package]
name = "onednn-sys"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust bindings for oneDNN"
homepage = "https://github.com/charles-r-earp/onednn-sys"
repository = "https://github.com/charles-r-earp/onednn-sys"
links = "dnnl"

[dependencies]
libc = "0.2.71"

[build-dependencies]
cmake = "0.1.44"



